Display elasped time of job execute at master.

--- a/config/cuto/master.ini
+++ b/config/cuto/master.ini
@@ -3,6 +3,7 @@ default_node='localhost'
 default_port=2015
 default_timeout_min=30
 connection_timeout_sec=60
+time_tracking_span_min=10
 
 [dir]
 jobnet_dir='.\jobnet'
