Add linux setting file.

--- a/test/cuto/servant/main/binderror.ini
+++ b/test/cuto/servant/main/binderror.ini
@@ -7,9 +7,9 @@ multi_proc=20
 heartbeat_span_sec=30
 
 [dir]
-joblog_dir='./joblog'
-job_dir='./jobscript'
-log_dir='./log'
+joblog_dir='.\joblog'
+job_dir='.\jobscript'
+log_dir='.\log'
 
 [log]
 output_level='info'
