--- a/test/cuto/servant/main/error_l.ini
+++ b/test/cuto/servant/main/error_l.ini
@@ -1,17 +1,17 @@
 [sys]
 bind_address='0.0.0.0'
-bind_port=12345
+bind_port=65536
 
 [job]
 multi_proc=20
 heartbeat_span_sec=30
 
 [dir]
-joblog_dir='.\joblog'
-job_dir='.\jobscript'
-log_dir='.\log'
+joblog_dir='joblog'
+job_dir='jobscript'
+log_dir='log'
 
 [log]
-output_level='noexistlevel'
+output_level='info'
 max_size_kb=10240
 max_generation=2
