Add linux's unit test of servant/job .

--- a/release/bin/servant.ini
+++ b/release/bin/servant.ini
@@ -1,15 +1,16 @@
-[sys]
-bind_address='@BIND_ADDRESS'
-bind_port=@LISTEN_PORT
-
 [job]
-multi_proc=10
-heartbeat_span_sec=30
+default_node='localhost'
+default_port=@LISTEN_PORT
+default_timeout_min=30
+connection_timeout_sec=60
+time_tracking_span_min=10
 
 [dir]
-joblog_dir='@ROOT/joblog'
-job_dir='@ROOT/jobscript'
+jobnet_dir='@ROOT/bpmn'
 log_dir='@ROOT/log'
+
+[db]
+db_file='@ROOT/data/cuto.sqlite'
 
 [log]
 output_level='info'
