--- a/release/bin/servant.ini
+++ b/release/bin/servant.ini
@@ -1,20 +1,18 @@
+[sys]
+bind_address='@BIND_ADDRESS'
+bind_port=@LISTEN_PORT
+
 [job]
-default_node='localhost'
-default_port=@LISTEN_PORT
-default_timeout_min=30
-connection_timeout_sec=60
-time_tracking_span_min=10
+multi_proc=10
+heartbeat_span_sec=30
 
 [dir]
-jobnet_dir='@ROOT/bpmn'
+joblog_dir='@ROOT/joblog'
+job_dir='@ROOT/jobscript'
 log_dir='@ROOT/log'
-
-[db]
-db_file='@ROOT/data/cuto.sqlite'
 
 [log]
 output_level='info'
 max_size_kb=10240
 max_generation=2
 timeout_sec=5
-
