--- a/config/cuto/master.ini
+++ b/config/cuto/master.ini
@@ -4,6 +4,7 @@ default_port=2015
 default_timeout_min=30
 connection_timeout_sec=60
 time_tracking_span_min=10
+attempt_limit=1
 
 [dir]
 jobnet_dir='.\jobnet'
